--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <header>
-            <img src="images/codoacodo.png" alt=" 'Codo a codo' Logo" style="width:10%; height:10%;">
+            <img src="codoacodo.png" alt=" 'Codo a codo' Logo" style="width:10%; height:10%;">
         </header>
 
         <nav>
@@ -20,13 +20,13 @@
         </nav>
 
         <main>
-            <img src="images/script.png" alt=" 'JScript' Logo" id="scriptlogo">
+            <img src="script.png" alt=" 'JScript' Logo" id="scriptlogo">
 
             <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nostrum soluta iste magni ex ratione itaque illo a sit deserunt, non at quas fuga culpa esse veritatis neque, sed alias!</p>
 
             <br>
 
-            <img src="images/css.png" alt=" 'CSS' Logo">
+            <img src="css.png" alt=" 'CSS' Logo">
 
             <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nostrum soluta iste magni ex ratione itaque illo a sit deserunt, non at quas fuga culpa esse veritatis neque, sed alias!</p>
         </main>
